grpc-lb/k8s-manifests/server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-server
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: demo
spec:
  type: ClusterIP
  ports:
    - port: 50051
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: demo
---
apiVersion: v1
kind: Service
metadata:
  name: demo-server-headless
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: demo
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 50051
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-server
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: demo
    spec:
      containers:
        - name: server
          image: "docker.io/garzelli95/demos:grpc-lb-server"
          imagePullPolicy: Always
          args:
            - -port=50051
            - -metrics-port=9090
          ports:
            - name: grpc
              containerPort: 50051
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "512Mi"
